...
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableRow style="@style/home.row.bottom">

        <!--Library-->
        <com.jaspersoft.android.jaspermobile.widget.LinearCardView
            android:id="@+id/home_item_library"
            style="@style/home.card.box.left"
            auto:body_subtitle="@string/library_card_desc"
            auto:body_title="@string/library_card_label"
            auto:header_icon="@drawable/ic_home_library"
            auto:header_background="@color/dashboard_item_bg" />

        <!--Saved Items-->
        <com.jaspersoft.android.jaspermobile.widget.LinearCardView
            android:id="@+id/home_item_saved_reports"
            style="@style/home.card.box"
            auto:body_subtitle="@string/saved_items_card_desc"
            auto:body_title="@string/sdr_ab_title"
            auto:header_icon="@drawable/ic_home_saved_items"
            auto:header_background="@color/dashboard_item_bg" />

    </TableRow>

    <TableRow style="@style/home.row.bottom">

        <!--Repository-->
        <com.jaspersoft.android.jaspermobile.widget.LinearCardView
            android:id="@+id/home_item_repository"
            style="@style/home.card.box.left"
            auto:body_subtitle="@string/repository_card_desc"
            auto:body_title="@string/repository_card_label"
            auto:header_icon="@drawable/ic_home_repository"
            auto:header_background="@color/dashboard_item_bg" />

        <!--Favorites-->
        <com.jaspersoft.android.jaspermobile.widget.LinearCardView
            android:id="@+id/home_item_favorites"
            style="@style/home.card.box"
            auto:body_subtitle="@string/favorites_card_desc"
            auto:body_title="@string/favorites_card_label"
            auto:header_icon="@drawable/ic_home_favorites"
            auto:header_background="@color/dashboard_item_bg" />

    </TableRow>

    <TableRow style="@style/home.row">

        <!--Settings-->
        <com.jaspersoft.android.jaspermobile.widget.LinearCardView
            android:id="@+id/home_item_settings"
            style="@style/home.card.box.left"
            auto:body_subtitle="@string/settings_card_desc"
            auto:body_title="@string/settings_card_label"
            auto:header_icon="@drawable/ic_home_config"
            auto:header_background="@color/config_item_bg" />

        <!--Servers-->
        <com.jaspersoft.android.jaspermobile.widget.LinearCardView
            android:id="@+id/home_item_servers"
            style="@style/home.card.box"
            auto:body_subtitle="@string/servers_card_desc"
            auto:body_title="@string/servers_card_label"
            auto:header_icon="@drawable/ic_home_servers"
            auto:header_background="@color/config_item_bg" />

...
