...
    <string name="h_servers_descr">View and change server profiles</string>
    <string name="h_server_profile_label">"Server Profile: "</string>
    <string name="h_server_switched_toast">Server was switched to \"%s\"</string>
    <!-- Options Menu -->
    <string name="h_om_switch_server">Change Server</string>
    <!-- Connection Dialog -->
    <string name="h_ad_title_no_connection">No connection</string>
    <string name="h_ad_msg_no_connection">Please check your mobile network settings and try again.</string>
    <!-- Password Dialog -->
    <string name="h_ad_title_enter_password">Enter Password</string>
    <string name="h_ad_label_server_profile">Server Profile:</string>
    <string name="h_ad_label_organization">Organization:</string>
    <string name="h_ad_label_username">Username:</string>

...
