<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/im_logo_white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/im_full_name" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="-10dp"
            android:layout_marginRight="-10dp"
            card_view:cardBackgroundColor="@color/card_login_bg"
            card_view:cardCornerRadius="0dp"
            card_view:cardElevation="10dp"
            card_view:cardUseCompatPadding="true"
            card_view:contentPadding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/aliasEdit"
                    style="@style/editTextAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:hint="@string/hint_alias"
                    android:inputType="textUri" />

                <EditText
                    android:id="@+id/serverUrlEdit"
                    style="@style/editTextAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_server_url"
                    android:inputType="textUri" />

                <EditText
                    android:id="@+id/organizationEdit"
                    style="@style/editTextAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_organization"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/usernameEdit"
                    style="@style/editTextAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_username"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/passwordEdit"
                    style="@style/editTextAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    style="@style/addAccountCard">

                    <Button
                        android:id="@+id/addAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_login_btn_blue"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/add_account"
                        android:textColor="@color/text_login_bg" />
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>