...
        android:layout_toLeftOf="@+id/secondaryAction"
        android:layout_toRightOf="@android:id/icon"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@android:id/text1"
            style="@style/Widget.JasperMobile.TextView.List.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            tools:text="Large Text" />

        <TextView
            android:id="@android:id/text2"
            style="@style/Widget.JasperMobile.TextView.List.SubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            tools:text="Small Text" />
    </LinearLayout>
...
