...
    <string name="h_rd_description">If you enjoy using TIBCO® JasperMobile™, please take a moment to rate it. It won\'t take more than a minute. Thanks for your support!</string>
    <string name="h_rd_rate">Rate</string>
    <string name="h_rd_never">No, thanks</string>
    <string name="h_rd_later">Remind me later</string>

    <!-- Delete Dialog -->
    <string name="spm_delete_btn">Delete</string>

    <!-- Server Profile Activity -->
    <string name="sp_save_btn">Save</string>

    <!-- Error messages -->
    <string name="sp_error_field_required">This field is required.</string>
    <string name="sp_error_url_not_valid">URL is not valid.</string>
    <string name="sp_error_duplicate_alias">Duplicate account name.</string>
    <string name="sp_error_reserved_alias">Alias reserved.</string>

    <!-- Repository Activity -->
    <string name="resources_not_found">No resources found</string>
    <string name="r_search_nothing_to_display">No items match your search.</string>

...
